--- a/DataDrivenFramework/src/test/resources/config.properties
+++ b/DataDrivenFramework/src/test/resources/config.properties
@@ -1,5 +1,5 @@
 # browser types:Chrome, IE, Firefox ,Safari,Opera,Edge
-browserType= Chrome
+browserType= chrome
 dataBaseServerName = localhost
 dataBasePort = 32118
 dataBaseSID = xe
