--- a/DataDrivenFramework/src/test/resources/config.properties
+++ b/DataDrivenFramework/src/test/resources/config.properties
@@ -1,5 +1,6 @@
-# browser types:Chrome, IE, Firefox ,Safari,Opera,Edge
+# browser types:chrome,edge,remoteChome,remotefirefox,cheadless,firefox
 browserType= chrome
+Headless = OFF
 dataBaseServerName = localhost
 dataBasePort = 32118
 dataBaseSID = xe
