--- a/DataDrivenFramework/src/test/resources/SessionTime.properties
+++ b/DataDrivenFramework/src/test/resources/SessionTime.properties
@@ -1,3 +1,3 @@
-#the browser is set to 20201003104253952
-#Sat Oct 03 10:42:53 EDT 2020
-SessionTime=20201003104253952
+#The SessionTime is set to 20201218175929643
+#Fri Dec 18 17:59:29 EST 2020
+SessionTime=20201218175929643
